Update Settings “main”

--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,9 @@
 title: Project Avalon systems status page
 languageCode: en
 params:
-  copyrightHolder: Example Inc.
+  copyrightHolder: Project Avalon
   dateFormat: 'January 2, 2006 at 3:04 PM'
-  description_footer: >-
-    <a class='text-grey-darkest' title='Visit example.com'
-    href='https://www.example.com/'>Example.com</a> provides open-source
-    software for all kind of sectors.
+  description_footer: ''
   description_header: >-
     Information about <a class='text-grey-darkest' title='Visit example.com'
     href='https://www.example.com/'>example</a> systems operations.<br />Follow
